# neuro-bot

./: .gitignore  .travis.yml  0x00  Makefile  Makefile.am  README.md  README.txt  SConstruct  a.out  argv.c  argv.h  autogen.sh  build.sh  build_simple.sh  channel.c  channel.h  config.c  config.h  configure.ac  curl_wrap.c  curl_wrap.h  dl.c  dl.h  dpl.c  dpl.h  global.h  irc-client.conf  irc.c  irc.h  irc_cmd.c  irc_cmd.h  irc_parser.c  irc_parser.h  irc_plugin.c  irc_plugin.h  khash.h  log.c  log.h  main.c  mod_time.c  (+31 more)
codeblocks/neurobot/: neurobot.cbp
contrib/vstudio10/: irc-client.vcxproj  irc-client.vcxproj.filters
doc/: uml.uxf
jvmtest/: Sample2.c  Sample2.java
modules/: Makefile  Makefile.am  README  build.sh  curl_wrap.c  curl_wrap.h  mod_eksi.py  mod_eksi_rnd.py  mod_example.h  mod_example.py  mod_git.c  mod_test.py  mod_time.c  mod_title.c  mod_title.h  mod_whereis.c  mod_wiki.c  mod_wiki.h  mod_youtube.c  mod_youtube.h  neurobotapi.c  neurobotapi.h  utils.c  utils.h
plugins/: JavaPluginTest.java  Makefile  _mod_anan.py  mod_anan.py  mod_eksi.py  mod_example.py  mod_hn.py  plugin_channels.c  plugin_client.h  plugin_git.c  plugin_gris.c  plugin_java_manager.c  plugin_map.c  plugin_mesai.c  plugin_oktay_lol.c  plugin_python_manager.c  plugin_rss.c  plugin_seen.c  plugin_test.c  plugin_title.c  plugin_weather.c  plugin_wiki.c  plugin_youtube.c  plugin_youtube_search.c
plugins/utils/: curl_wrapper.c  curl_wrapper.h  json.c  json.h
tests/: Makefile  config_test.c  curl_wrap_test.c  irc_parser_test.c  test_irc_parser.c  utils_test.c
winbuild/: INSTALL.txt
winbuild/curl-7.29.0/: README.txt
winbuild/gtk+-bundle/: README.txt
winbuild/jansson-2.4/: README.txt
winbuild/neuro-bot/: neuro-bot.sln
winbuild/neuro-bot/neuro-bot/: build.bat  neuro-bot.vcxproj  neuro-bot.vcxproj.filters
winbuild/neurobot/: neurobot.sln
winbuild/neurobot/mod_time/: mod_time.vcxproj  mod_time.vcxproj.filters
winbuild/neurobot/mod_title/: mod_title.vcxproj  mod_title.vcxproj.filters
winbuild/neurobot/mod_wiki/: mod_wiki.vcxproj  mod_wiki.vcxproj.filters
winbuild/neurobot/mod_youtube/: mod_youtube.vcxproj  mod_youtube.vcxproj.filters
winbuild/neurobot/neurobot/: neurobot.vcxproj  neurobot.vcxproj.filters
